--- a/index_cards.html
+++ b/index_cards.html
@@ -6,6 +6,7 @@
     <title>Elixiere</title>
     <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="styles_cards.css" />
+    <link rel="icon" href="/icons/favicon.png?v=2" type="image/png">
     <script src="app.js"></script>
 </head>
 <body>
@@ -57,5 +58,12 @@
             </div>
         </div>
     </div>
+    <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('service-worker.js')
+      .then(() => console.log('Service Worker registriert'))
+      .catch((error) => console.error('Service Worker Fehler:', error));
+  }
+</script>
 </body>
 </html>
