Neu: Alchemy Jug

--- a/index_cards.html
+++ b/index_cards.html
@@ -58,6 +58,26 @@
             </div>
         </div>
     </div>
+    <h1>Alchemie Krug</h1>
+    <div class="card-container">
+        <div class="card">
+            <img src="img/Alchemy_Jug.png" alt="Alchemie Krug" />
+            <p>
+                Mit einer Aktion kannst du eine Flüssigkeit benennen und den Krug entkorken. Dadurch fließt die Flüssigkeit so lange heraus, bis der Krug leer ist oder die volle Tagesmenge produziert wurde. Einmal pro Tag.
+                <ul>
+                    <li>Säure 8 ounces</li>
+                    <li>Gift 0,5 ounces</li>
+                    <li>Bier 4 gallons</li>
+                    <li>Honig 1 gallon</li>
+                    <li>Mayonese 2 gallons</li>
+                    <li>Öl 1 quart</li>
+                    <li>Essig 2 gallons</li>
+                    <li>Wasser (frisch) 8 gallons</li>
+                    <li>Wasser (salzig) 12 gallons</li>
+                    <li>Wein 1 gallons</li>
+                </p>
+        </div>
+    </div>
     <script>
   if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register('service-worker.js')
